--- a/m2/jitsi-protocol-jabber/pom.xml
+++ b/m2/jitsi-protocol-jabber/pom.xml
@@ -24,10 +24,12 @@
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
       <artifactId>smack</artifactId>
+      <version>3.2.2-jitsi-2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
       <artifactId>smackx</artifactId>
+      <version>3.2.2-jitsi-2-SNAPSHOT</version>
     </dependency>
     <!-- org.jitsi -->
     <dependency>
