--- a/m2/jitsi-protocol-sip/pom.xml
+++ b/m2/jitsi-protocol-sip/pom.xml
@@ -52,6 +52,7 @@
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
       <artifactId>smack</artifactId>
+      <version>3.2.2-jitsi-2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
