--- a/m2/jitsi-protocol/pom.xml
+++ b/m2/jitsi-protocol/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
       <artifactId>smack</artifactId>
+      <version>3.2.2-jitsi-2-SNAPSHOT</version>
     </dependency>
     <!-- org.jitsi -->
     <dependency>
