--- a/m2/jitsi-util/pom.xml
+++ b/m2/jitsi-util/pom.xml
@@ -25,6 +25,11 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.main</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.igniterealtime.smack</groupId>
+      <artifactId>smack</artifactId>
+      <version>3.2.2-jitsi-2-SNAPSHOT</version>
+    </dependency>
     <!-- org.jitsi -->
     <dependency>
       <groupId>${project.groupId}</groupId>
